<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name = "desc"></string>
    <string name = "basketball"></string>
    <string name = "desc3"></string>
    <string name = "desc2"></string>
	<string name = "desc4"></string>
	<string name = "titleofEvent">What? </string>
	<string name = "particfriends">Who? </string>
	<string name = "specifyTime">Start time </string>
	<string name = "fittari">Create new event</string>
	<string name = "location">Where?</string>
	<string name="settingslink">Settings</string>
    <string name="titleofsettings"></string>
    <string name="meetster_authority">com.russia.Meetster.provider</string>
    <string name="event_header">Create new event</string>
    <string name="event_category">Which? </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_confirmationscreen">ConfirmationscreenActivity</string>
    <string name="createbutton">Create event</string>
    <string name="settings">Settings</string>
    <string name="app_name">Meetster</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="timeframe">Start time</string>
    <string name="participants">With whom: </string>
    <string name="create">Create Event</string>
    <string name="title_activity_main">Main</string>
    <string name="lots_of_text">random text goes here</string>
    <string name="starttime">Start:</string>
    <string name="endtime">End:</string>
    <string name="selecttimedate">Start time</string>
    <string name = "linktext">Select from map</string>
    <string name = "silver">#C0C0C0</string>
	<string name = "margin">15dp</string>
	<string name = "enddatetime2">End time</string>
</resources>
